frontend/src/App.scss
body {
    width: 100vw;
}

.Home {
    padding: 7vh 7vw; 
    height: 100vh; 
    background-image: url("./components/images/home.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

}

.logo {
    margin-bottom: 8px
}

.navbar-toggler {
    margin-bottom: 0.5rem;
}

.homepage-description {
    padding-left: 16px;
}

.search {
    width: 60%;
    align-items: center;
    margin-left: 20%;
    margin-right: 20%;
    margin-top: 10%

}

@media only screen and (max-width: 600px) {
    .search {
      width: 90%;
      margin-left: 5%;
      margin-right: 5%;
    }
  }

@media only screen and (max-width: 600px) and (min-width: 360px) {
.navbar {
    h1 {
        font-size: 1.5em;
    }
}
.homepage-description {
    h5 {
        font-size: 0.9em;
    }
}
}
    
// to get the toggler on the same line for smaller phone screens
@media only screen and (max-width: 360px) {
    .navbar-toggler {
        font-size: 1rem;
    }
}

// for iPhone 5
@media only screen and (max-width: 320px) {
    .navbar {
        h1 {
            font-size: 1.2em;
        }
    }

    .homepage-description {
        h5 {
            font-size: 0.85em;
        }
    }

}

.links {
    text-decoration: none;
    color: black
}

.links:hover {
    color: white;
    text-decoration: none
}


.hamburgerDropDown {
    position: fixed;
    margin-bottom: 8px;
    padding: 1%;
    right: 7%;
    width: 50vw;
    background-color: white;
    border: 1px solid bisque;
    list-style: none;
  }

.nav-button-margin {
    margin-bottom: 0.5rem;
}

